[package]
name = "fts-rs"
version = "0.1.0"
authors = ["McPotato <luc.sydney.georges@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.20.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
