[package]
name = "boolean_retrieval"
version = "0.1.0"
authors = ["McPotato <luc.sydney.georges@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
env_logger = "0.8.2"
log = "0.4"
quick-xml = { version = "0.20.0", features = ["serialize"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

